--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Persistent Preferences</title>
 </head>
 <body>
-    
+    <h1>List and Preferences</h1>
+    <ul id="list">
+      <!-- Items will be added dynamically with JavaScript -->
+    </ul>
+    <div>
+      <h2>Preferences</h2>
+      <form>
+        <fieldset>
+          <legend>Theme</legend>
+          <label>
+            <input type="radio" name="theme" value="default" checked> Default
+          </label>
+          <label>
+            <input type="radio" name="theme" value="dark"> Dark
+          </label>
+          <label>
+            <input type="radio" name="theme" value="light"> Light
+          </label>
+        </fieldset>
+        <fieldset>
+          <legend>List Style</legend>
+          <label>
+            <input type="radio" name="list-style" value="default" checked> Default
+          </label>
+          <label>
+            <input type="radio" name="list-style" value="rounded"> Rounded
+          </label>
+          <label>
+            <input type="radio" name="list-style" value="circle"> Circle
+          </label>
+        </fieldset>
+      </form>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
