adds bootstrap and css

--- a/index.html
+++ b/index.html
@@ -5,41 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persistent Preferences</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+X6QLZ3XEKjsxtP+0UuFQO8N2AjooDt" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>List and Preferences</h1>
-    <ul id="list">
-      <!-- Items will be added dynamically with JavaScript -->
-    </ul>
-    <div>
-      <h2>Preferences</h2>
-      <form>
-        <fieldset>
-          <legend>Theme</legend>
-          <label>
-            <input type="radio" name="theme" value="default" checked> Default
-          </label>
-          <label>
-            <input type="radio" name="theme" value="dark"> Dark
-          </label>
-          <label>
-            <input type="radio" name="theme" value="light"> Light
-          </label>
-        </fieldset>
-        <fieldset>
-          <legend>List Style</legend>
-          <label>
-            <input type="radio" name="list-style" value="default" checked> Default
-          </label>
-          <label>
-            <input type="radio" name="list-style" value="rounded"> Rounded
-          </label>
-          <label>
-            <input type="radio" name="list-style" value="circle"> Circle
-          </label>
-        </fieldset>
-      </form>
-    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
