adds green theme title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h2>Preferences</h2>
           <label for="theme-select">Select Theme:</label>
           <select id="theme-select">
-            <option value="default">Default</option>
+            <option value="default">Green</option>
             <option value="dark">Dark</option>
             <option value="light">Light</option>
           </select>
