changes list title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <body>
-        <h1>My List</h1>
+        <h1>List</h1>
         <ul id="my-list"></ul>
         <div id="preferences-panel">
           <h2>Preferences</h2>
