adds default theme

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
           <h2>Preferences</h2>
           <label for="theme-select">Select Theme:</label>
           <select id="theme-select">
-            <option value="default">Green</option>
+            <option value="default">Default</option>
             <option value="dark">Dark</option>
             <option value="light">Light</option>
+            <option value="green">Green</option>
           </select>
           <br>
           <label for="list-select">List Style:</label>
