--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <option value="default">Default</option>
             <option value="bullets">Bullets</option>
             <option value="numbers">Numbers</option>
+            <option value="numbers">Circle</option>
           </select>
         </div>
     <script src="main.js"></script>
