adds pink theme value

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <option value="dark">Dark</option>
             <option value="light">Light</option>
             <option value="green">Green</option>
+            <option value="pink">pink</option>
           </select>
           <br>
           <label for="list-select">List Style:</label>
