adds roman bullets and pink theme

--- a/index.html
+++ b/index.html
@@ -9,26 +9,28 @@
 </head>
 <body>
     <body>
-        <h1>List</h1>
-        <ul id="my-list"></ul>
-        <div id="preferences-panel">
-          <h2>Preferences</h2>
-          <label for="theme-select">Select Theme:</label>
-          <select id="theme-select">
-            <option value="default">Default</option>
-            <option value="dark">Dark</option>
-            <option value="light">Light</option>
-            <option value="green">Green</option>
-            <option value="pink">pink</option>
-          </select>
-          <br>
-          <label for="list-select">List Style:</label>
-          <select id="list-select">
-            <option value="default">Default</option>
-            <option value="bullets">Bullets</option>
-            <option value="numbers">Numbers</option>
-            <option value="roman">Roman</option>
-          </select>
+        <div class="container">
+            <h1>List</h1>
+            <ul id="my-list"></ul>
+            <div id="preferences-panel">
+            <h2>Preferences</h2>
+            <label for="theme-select">Select Theme:</label>
+            <select id="theme-select">
+                <option value="default">Default</option>
+                <option value="dark">Dark</option>
+                <option value="light">Light</option>
+                <option value="green">Green</option>
+                <option value="pink">Pink</option>
+            </select>
+            <br>
+            <label for="list-select">List Style:</label>
+            <select id="list-select">
+                <option value="default">Default</option>
+                <option value="bullets">Bullets</option>
+                <option value="numbers">Numbers</option>
+                <option value="roman">Roman</option>
+            </select>
+            </div>
         </div>
     <script src="main.js"></script>
 </body>
