adds list group

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <h1>List</h1>
-            <ul id="my-list"></ul>
+            <ul id="my-list" class="list-group"></ul>
             <div id="preferences-panel">
             <h2>Preferences</h2>
             <label for="theme-select">Select Theme:</label>
