--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="container">
             <h1>List</h1>
             <ul id="my-list" class="list-group"></ul>
-            <div id="preferences-panel">
-            <h2>Preferences</h2>
+            <div id="preferences-panel" class="card-p-3">
+            <h2 class="card-title">Preferences</h2>
             <label for="theme-select">Select Theme:</label>
             <select id="theme-select">
                 <option value="default">Default</option>
