--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
             <ul id="my-list" class="list-group"></ul>
             <div id="preferences-panel" class="card-p-3">
             <h2 class="card-title">Preferences</h2>
-            <label for="theme-select">Select Theme:</label>
-            <select id="theme-select">
-                <option value="default">Default</option>
-                <option value="dark">Dark</option>
-                <option value="light">Light</option>
-                <option value="green">Green</option>
-                <option value="pink">Pink</option>
-            </select>
-            <br>
-            <label for="list-select">List Style:</label>
-            <select id="list-select">
-                <option value="default">Default</option>
-                <option value="bullets">Bullets</option>
-                <option value="numbers">Numbers</option>
-                <option value="roman">Roman</option>
-            </select>
-            </div>
+            <form>
+                <label for="theme-select">Select Theme:</label>
+                <select id="theme-select">
+                    <option value="default">Default</option>
+                    <option value="dark">Dark</option>
+                    <option value="light">Light</option>
+                    <option value="green">Green</option>
+                    <option value="pink">Pink</option>
+                </select>
+                <br>
+                <label for="list-select">List Style:</label>
+                <select id="list-select">
+                    <option value="default">Default</option>
+                    <option value="bullets">Bullets</option>
+                    <option value="numbers">Numbers</option>
+                    <option value="roman">Roman</option>
+                </select>
+                </div>
+            </form>
         </div>
     <script src="main.js"></script>
 </body>
