--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </form>
         </div>
     </div>
+    <script src="bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
